# parsers_api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  codereview.md  docker-compose.yml  pyproject.toml
src/: cli.py
src/parser_api/application/command/parsing/: parse_querry.py
src/parser_api/application/dto/enums/: sites.py
src/parser_api/application/dto/parsing/: process.py  request.py  responce.py
src/parser_api/application/port/db/repositories/results/: reader.py  writer.py
src/parser_api/application/port/parser/: parser.py
src/parser_api/composition/: api_app.py
src/parser_api/composition/configuration/: config.py
src/parser_api/composition/ioc/: application.py  configuration.py  infrastructure.py  provider_registry.py
src/parser_api/infrastructure/mongodb/: collections.py  connect.py  exeptions.py
src/parser_api/infrastructure/mongodb/documents/: results.py
src/parser_api/infrastructure/mongodb/repositories/results/: reader.py  writer.py
src/parser_api/infrastructure/web/: exeptions.py  parser_registry.py
src/parser_api/infrastructure/web/digikey/: digikey_parser.py
src/parser_api/infrastructure/web/lcsc/: lcsc_parser.py
src/parser_api/infrastructure/web/mouser/: mouser_parser.py
src/parser_api/infrastructure/web/octopart/: octopart_parser.py
src/parser_api/presentation/http/: api_router.py  exeption_handler.py
src/parser_api/presentation/http/parsing/: controller.py  exeptions.py  schema.py
